volumes/hostPath/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: myweb
  namespace: myns
spec:
  rules:
  - host: myweb.local
    http:
      paths:
      - backend:
          service:
            name: myweb
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
